Fix the alignment on the image

--- a/main.css
+++ b/main.css
@@ -47,7 +47,7 @@
 .card-Imgsection{
     display: flex;
     justify-content: center;
-    padding: 40px;
+    padding: 40px 40px 15px 40px;
 }
 
 .wrench{
